--- a/Outtatimers Portal/platformio.ini
+++ b/Outtatimers Portal/platformio.ini
@@ -15,3 +15,10 @@ framework = arduino
 lib_deps = fastled/FastLED@^3.10.2
 upload_speed = 115200
 monitor_speed = 115200
+
+[env:test_native]
+platform = native
+framework = native
+board = native
+build_flags = -DUNIT_TEST
+lib_deps =
