✨ Enhance WiFi control and input management for Portal LED Controller
- Added support for WiFi credentials management with a dedicated setup script.
- Introduced a new `StatusLED` class to manage the on-board LED for WiFi connection status indication.
- Implemented `WiFiInputSource` to handle remote control via HTTP requests.
- Updated `InputManager` to support multiple input sources, including buttons and WiFi commands.
- Enhanced configuration options in `config.h` for better maintainability.
- Added comprehensive documentation in README.md for setup and usage instructions.
- Updated `.gitignore` to exclude sensitive files and unnecessary artifacts.

--- a/Outtatimers Portal/.gitignore
+++ b/Outtatimers Portal/.gitignore
@@ -3,6 +3,9 @@
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/ipch
+
+# WiFi credentials (security)
+wifi_credentials.h
 *.zip
 \#autos_saved_files\#
 *.lck
