--- a/Outtatimers Portal/platformio.ini
+++ b/Outtatimers Portal/platformio.ini
@@ -12,6 +12,7 @@
 platform = espressif8266
 board = d1
 framework = arduino
+board_build.filesystem = spiffs
 lib_deps = fastled/FastLED@^3.10.2
 upload_speed = 115200
 monitor_speed = 115200
